# ml-examples

./: .gitignore  .skyignore  LICENSE  Makefile  README.md  code.md  fib.py  issue.py  learning_linear_regression.py  linear_regression.py  pyproject.toml  sink-config.yaml
archive/: README.md
cloud/: lambda_rtx6000_dev.sky.yaml
scripts/: aggregate_linear_gaussian_final_report.py  aggregate_nonlinear_unsupervised_objective_report.py  aggregate_random_qr_generalization.py  aggregate_weak_observability.py  compare_linear_gaussian.py  diagnose_nonlinear_mixture_projection.py  evaluate_linear_gaussian.py  evaluate_nonlinear.py  evaluate_nonlinear_particle_filter.py  plot_linear_gaussian.py  plot_nonlinear.py  plot_nonlinear_sweep.py  report_nonlinear_k4_pareto.py  sweep_diagnostic_baselines.py  sweep_edge_regularizer.py  sweep_elbo_ablation.py  sweep_linear_gaussian.py  sweep_nonlinear_learned.py  sweep_nonlinear_reference.py  sweep_objective_budget.py  sweep_predictive_head.py  sweep_qr_generalization.py  sweep_quadrature_adf.py  sweep_quadrature_adf_distilled.py  sweep_quadrature_pareto.py  sweep_random_qr_calibration.py  sweep_random_qr_generalization.py  sweep_self_fed_supervised.py  sweep_transition_consistency.py  sweep_weak_observability.py  train_linear_gaussian.py  train_nonlinear.py  train_predictive_head.py  train_quadrature_adf_distilled.py
tests/: test_distribution_tracing.py  test_edge_oracle.py  test_elbo_shapes.py  test_gaussian_edge_posterior.py  test_kalman_scalar.py  test_nonlinear_reference.py  test_plot_nonlinear.py  test_plotting.py  (+7 more)
(+115 files in other folders)
