[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-examples"
version = "0.1.0"
description = "Learned variational Bayesian filtering experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "pyyaml",
  "scipy",
  "torch",
  "tqdm",
]

[dependency-groups]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]
extend-exclude = ["archive"]
